syntax = 'proto3';

package api.v1;

option go_package = 'api/v1';

import 'api/v1/model.proto';

message ListSessionsRequest {}

message ListSessionsResponse {
  repeated Session sessions = 1;
}

service APIService {
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse) {}
}